// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dvakrát stop 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`dvakrát stop 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT1H7M",
      "mezicasy": Array [],
      "running": false,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`dvakrát stop 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT1H7M",
      "mezicasy": Array [],
      "running": false,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`dvakrát stop 4`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT1H7M",
    "mezicasy": Array [],
    "running": false,
    "typ": "cyklo",
  },
]
`;

exports[`insert mezičas 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`insert mezičas 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT1M49.09S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`insert mezičas 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT1M49.09S",
        },
        Object {
          "cas": "PT5M49.09S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`insert mezičas 4`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT1M49.09S",
        },
        Object {
          "cas": "PT5M32.7S",
        },
        Object {
          "cas": "PT5M49.09S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`insert mezičas 5`] = `
Array [
  Object {
    "__v": 3,
    "base": 2018-11-05T16:02:23.010Z,
    "delta": "P0D",
    "mezicasy": Array [
      Object {
        "cas": "PT1M49.09S",
      },
      Object {
        "cas": "PT5M32.7S",
      },
      Object {
        "cas": "PT5M49.09S",
      },
    ],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`nastartuj již nastartované stopky 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`nastartuj již nastartované stopky 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`nastartuj již nastartované stopky 3`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-11-05T08:14:32.500Z,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": true,
    "typ": "cyklo",
  },
]
`;

exports[`nastartuj stopky (stopky neexistují) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`nastartuj stopky (stopky neexistují) 2`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-11-05T08:14:32.500Z,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": true,
    "typ": "cyklo",
  },
]
`;

exports[`neexistující modifikace 1`] = `
Object {
  "code": "neexistuje",
  "status": "Neexistující modifikace stopek 'huh'.",
}
`;

exports[`not authenticated 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`přidej mezičas (stopky nastartovány) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`přidej mezičas (stopky nastartovány) 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT1M49.09S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`přidej mezičas (stopky nastartovány) 3`] = `
Array [
  Object {
    "__v": 1,
    "base": 2018-11-05T16:02:23.010Z,
    "delta": "P0D",
    "mezicasy": Array [
      Object {
        "cas": "PT1M49.09S",
      },
    ],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`přidej mezičas (stopky neexistují) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`přidej mezičas (stopky neexistují) 2`] = `
Array [
  Object {
    "__v": 0,
    "mezicasy": Array [],
    "running": false,
    "typ": "půlmaraton",
  },
]
`;

exports[`remove mezičas - existující 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - existující 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT2M15.7S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - existující 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT2M15.7S",
        },
        Object {
          "cas": "PT4M32.03S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - existující 4`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT4M32.03S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - existující 5`] = `
Array [
  Object {
    "__v": 3,
    "base": 2018-11-05T16:02:23.010Z,
    "delta": "P0D",
    "mezicasy": Array [
      Object {
        "cas": "PT4M32.03S",
      },
    ],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`remove mezičas - neexistující 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - neexistující 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT2M15.7S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - neexistující 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT2M15.7S",
        },
        Object {
          "cas": "PT4M32.03S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - neexistující 4`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [
        Object {
          "cas": "PT2M15.7S",
        },
        Object {
          "cas": "PT4M32.03S",
        },
      ],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`remove mezičas - neexistující 5`] = `
Array [
  Object {
    "__v": 3,
    "base": 2018-11-05T16:02:23.010Z,
    "delta": "P0D",
    "mezicasy": Array [
      Object {
        "cas": "PT2M15.7S",
      },
      Object {
        "cas": "PT4M32.03S",
      },
    ],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`reset 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`reset 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT1H7M",
      "mezicasy": Array [],
      "running": false,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`reset 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "P0D",
      "mezicasy": Array [],
      "running": false,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`reset 4`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": false,
    "typ": "cyklo",
  },
]
`;

exports[`start a stop 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T08:14:32.500Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`start a stop 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT1H7M",
      "mezicasy": Array [],
      "running": false,
      "typ": "cyklo",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`start a stop 3`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT1H7M",
    "mezicasy": Array [],
    "running": false,
    "typ": "cyklo",
  },
]
`;

exports[`změň +delta (stopky nastartovány) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň +delta (stopky nastartovány) 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:13.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň +delta (stopky nastartovány) 3`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-11-05T16:02:13.010Z,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`změň +delta (stopky zastaveny) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň +delta (stopky zastaveny) 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT2M12.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň +delta (stopky zastaveny) 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT5M12.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň +delta (stopky zastaveny) 4`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT5M12.36S",
    "mezicasy": Array [],
    "running": false,
    "typ": "půlmaraton",
  },
]
`;

exports[`změň -delta (stopky nastartovány, změna nepovolena) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky nastartovány, změna nepovolena) 2`] = `
Object {
  "code": "nepovoleno",
  "status": "stopky by se dostaly do mínusu",
}
`;

exports[`změň -delta (stopky nastartovány, změna nepovolena) 3`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-11-05T16:02:23.010Z,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`změň -delta (stopky nastartovány, změna povolena) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky nastartovány, změna povolena) 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.110Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky nastartovány, změna povolena) 3`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-11-05T16:02:23.110Z,
    "delta": "P0D",
    "mezicasy": Array [],
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`změň -delta (stopky zastaveny) - nelze jít pod 0 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) - nelze jít pod 0 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT12.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) - nelze jít pod 0 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT12.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) - nelze jít pod 0 4`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT12.36S",
    "mezicasy": Array [],
    "running": false,
    "typ": "půlmaraton",
  },
]
`;

exports[`změň -delta (stopky zastaveny) 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": "2018-11-05T16:02:23.010Z",
      "delta": "P0D",
      "mezicasy": Array [],
      "running": true,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) 2`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT2M12.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) 3`] = `
Object {
  "code": "ok",
  "response": Object {
    "stopky": Object {
      "base": null,
      "delta": "PT2M2.36S",
      "mezicasy": Array [],
      "running": false,
      "typ": "půlmaraton",
    },
  },
  "status": "uloženo v pořádku",
}
`;

exports[`změň -delta (stopky zastaveny) 4`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT2M2.36S",
    "mezicasy": Array [],
    "running": false,
    "typ": "půlmaraton",
  },
]
`;
